[gd_scene load_steps=10 format=3 uid="uid://dxp0wcjcnnbqc"]

[ext_resource type="Script" path="res://assets/src/objects/entities/monster.gd" id="1_dr73e"]
[ext_resource type="SpriteFrames" uid="uid://bxaoa8ti5wog1" path="res://assets/animations/monsters/nacromancer.tres" id="2_fqs0a"]
[ext_resource type="Shader" uid="uid://6jcd5ivo3p7s" path="res://assets/shaders/hit_flash.tres" id="2_tln2x"]
[ext_resource type="Texture2D" uid="uid://tatf430r4uay" path="res://assets/sprites/gui/heart/full2.png" id="4_ftgm2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxfna"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7depo"]
shader = ExtResource("2_tln2x")
shader_parameter/enabled = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h1mv"]
size = Vector2(16.5, 12.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xp3lm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfi7c"]

[node name="monster" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
script = ExtResource("1_dr73e")

[node name="sight" type="RayCast2D" parent="."]

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_lxfna")

[node name="anim_sp" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7depo")
sprite_frames = ExtResource("2_fqs0a")
frame_progress = 0.53718

[node name="monster" type="Area2D" parent="."]

[node name="coll" type="CollisionShape2D" parent="monster"]
position = Vector2(0, 5.125)
shape = SubResource("RectangleShape2D_6h1mv")

[node name="attack" type="Area2D" parent="."]

[node name="coll" type="CollisionShape2D" parent="attack"]
shape = SubResource("RectangleShape2D_xp3lm")

[node name="detect_attack" type="Area2D" parent="."]

[node name="coll" type="CollisionShape2D" parent="detect_attack"]
shape = SubResource("RectangleShape2D_vfi7c")

[node name="navi_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="low_center" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(0, 4.76837e-07)
scale = Vector2(0.25, 0.227273)
texture = ExtResource("4_ftgm2")

[connection signal="animation_finished" from="anim_sp" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="monster" to="." method="_on_body_area_entered"]
[connection signal="timeout" from="navi_timer" to="." method="_on_navi_timer_timeout"]
